# mlops

./: .env  .gitignore  README.md  docker-compose.yaml  feature_store.yaml  mlops_take_home_assignment.ipynb  pyproject.toml
mlops/: __init__.py  api.py  data_validate.py  feature_store.py  model_monitoring.py  model_registry.py  orchestrate.py  pradiction_table.py  schema.py
