[project]
name = "mlops-engineer-assignment"
version = "0.1.0"
description = "A package to "
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "apache-airflow>=2.9.3",
    "boto3>=1.38.36",
    "duckdb>=1.3.0",
    "feast[duckdb,sqlite]>=0.49.0",
    "ipykernel>=6.29.5",
    "mlflow>=3.1.0",
    "pandas>=2.3.0",
    "protobuf>=6.31.1",
    "pyarrow>=17.0.0",
    "pydantic>=2.10.6",
    "scikit-learn>=1.7.0",
    "sse-starlette>=2.3.6",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "mlops"
